fixed white gap at bottom of img tag

--- a/src/res/main.css
+++ b/src/res/main.css
@@ -7,6 +7,8 @@ html, body{
   padding: 0px 0px;
 }
 
+vertical-align: middle;
+
 * {
   box-sizing: border-box;
 }
